Generally improvement Fo4 shaders, STF shader making progress